; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/utils/extr_excl.c_nn_excl_add.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/utils/extr_excl.c_nn_excl_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_excl = type { %struct.nn_pipe* }
%struct.nn_pipe = type { i32 }

@EISCONN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_excl_add(%struct.nn_excl* %0, %struct.nn_pipe* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nn_excl*, align 8
  %5 = alloca %struct.nn_pipe*, align 8
  store %struct.nn_excl* %0, %struct.nn_excl** %4, align 8
  store %struct.nn_pipe* %1, %struct.nn_pipe** %5, align 8
  %6 = load %struct.nn_excl*, %struct.nn_excl** %4, align 8
  %7 = getelementptr inbounds %struct.nn_excl, %struct.nn_excl* %6, i32 0, i32 0
  %8 = load %struct.nn_pipe*, %struct.nn_pipe** %7, align 8
  %9 = icmp ne %struct.nn_pipe* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @EISCONN, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %3, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load %struct.nn_pipe*, %struct.nn_pipe** %5, align 8
  %15 = load %struct.nn_excl*, %struct.nn_excl** %4, align 8
  %16 = getelementptr inbounds %struct.nn_excl, %struct.nn_excl* %15, i32 0, i32 0
  store %struct.nn_pipe* %14, %struct.nn_pipe** %16, align 8
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
